--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,7 @@
   margin: 0 auto;
   vertical-align: middle;
 }
+
 .loder {
   display: inline-block;
   width: 28px;
@@ -22,8 +23,41 @@
   margin: 0 auto;
   vertical-align: middle;
 }
+
 @keyframes spin {
   to {
     transform: rotate(360deg);
   }
+}
+
+.perspective-1000 {
+  perspective: 1000px;
+}
+
+.transform-style-preserve-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.5s ease-out;
 }
